// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`currentType_ERROR dispatched if no onError callback provided: 1 - response 1`] = `
Object {
  "error": [Error: thunk-failed],
  "type": "SECOND_ERROR",
}
`;

exports[`currentType_ERROR dispatched if no onError callback provided: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`currentType_ERROR dispatched if no onError callback provided: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`currentType_ERROR dispatched if no onError callback provided: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`currentType_ERROR dispatched if no onError callback provided: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "error": [Error: thunk-failed],
    "errorType": "SECOND_ERROR",
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND_ERROR",
}
`;

exports[`currentType_ERROR dispatched if no onError callback provided: 1 - title 1`] = `"SECOND"`;

exports[`default options.onError skipped if options.onError === null: 1 - response 1`] = `undefined`;

exports[`default options.onError skipped if options.onError === null: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`default options.onError skipped if options.onError === null: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`default options.onError skipped if options.onError === null: 1 - routes - SECOND - onError 1`] = `1`;

exports[`default options.onError skipped if options.onError === null: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`default options.onError skipped if options.onError === null: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`default options.onError skipped if options.onError === null: 1 - title 1`] = `"SECOND"`;

exports[`route onError called if other callbacks throw: 1 - response 1`] = `
Object {
  "error": [Error: thunk-failed],
  "type": "SECOND_ERROR",
}
`;

exports[`route onError called if other callbacks throw: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`route onError called if other callbacks throw: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`route onError called if other callbacks throw: 1 - routes - SECOND - onError 1`] = `1`;

exports[`route onError called if other callbacks throw: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`route onError called if other callbacks throw: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "error": [Error: thunk-failed],
    "errorType": "SECOND_ERROR",
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND_ERROR",
}
`;

exports[`route onError called if other callbacks throw: 1 - title 1`] = `"SECOND"`;

exports[`route onError dispatches redirect: 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`route onError dispatches redirect: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`route onError dispatches redirect: 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`route onError dispatches redirect: 1 - routes - SECOND - onError 1`] = `1`;

exports[`route onError dispatches redirect: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`route onError dispatches redirect: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "scene": "",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "replace",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/redirected",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`route onError dispatches redirect: 1 - title 1`] = `"REDIRECTED"`;
